Fix spacing on settings and filter sidebars

--- a/src/components/styles/Filter.css
+++ b/src/components/styles/Filter.css
@@ -21,7 +21,7 @@
 }
 
 .Filter hr {
-    margin: 0.75rem 0 0.75rem 0;
+    margin: 0.75rem 0 1.3rem 0;
 
     width: 35%;
     height: 3px;
@@ -55,5 +55,5 @@
 
 .Filter button {
     width: 60%;
-    margin-top: 1.4rem;
+    margin-top: 2rem;
 }
