--- a/src/pages/user/styles/Settings.css
+++ b/src/pages/user/styles/Settings.css
@@ -23,7 +23,7 @@
 }
 
 .Sidebar hr {
-    margin: 0.75rem 0 0.75rem 0;
+    margin: 0.75rem 0 1.3rem 0;
 
     width: 35%;
     height: 3px;
